--- a/css/layout.css
+++ b/css/layout.css
@@ -242,69 +242,172 @@ header .gnb.ban_fixed {
   border-bottom: 1px solid rgba(13, 13, 13, 0.05);
 }
 
-footer #family-site {
-  margin: 100px 0;
-}
-footer #family-site ul {
-  display: flex;
-  justify-content: space-between;
-}
-footer #family-site ul li {
-  width: auto;
-}
-footer #family-site ul li img {
-  height: 30px;
-}
-footer #footer {
-  background-color: #000;
+#footer {
+  position: relative;
   color: #fff;
-  padding: 100px 0;
+  font-size: 0;
+  background-color: #111b2a;
 }
-footer #footer .container {
+#footer .f-top .sns ul {
+  display: flex;
+}
+#footer .f-top .sns ul li {
+  opacity: 0.3;
+  border: solid 1px rgb(247, 247, 247);
+  transition: 0.3s;
+  border-radius: 18px;
+  margin-right: 13px;
+}
+#footer .f-top .sns ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 69px;
+  height: 69px;
+  line-height: 69px;
+}
+#footer .f-top .sns ul li:hover {
+  opacity: 1;
+  background: #326aff;
+  border: solid 1px #326aff;
+}
+#footer .f-top .family {
+  text-align: right;
+}
+#footer .f-top .family .family_site {
+  background-image: url("../images/main/down_arr_w.png");
+  background-repeat: no-repeat;
+  background-position: 88% center;
+  position: relative;
+  width: 228px;
+  height: 69px;
+  line-height: 67px;
+  border-radius: 18px;
+  border: solid 1px rgba(247, 247, 247, 0.3);
+  z-index: 3;
+  display: inline-block;
+  text-align: left;
+  transition: 0.5s;
+}
+#footer .f-top .family .family_site span {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 67px;
+  padding: 0 26px;
+  width: 100%;
+  display: block;
+  cursor: pointer;
+  transition: color 0.5s;
+}
+#footer .f-top .family .family_site .family_menu {
+  position: absolute;
+  right: 0;
+  top: 68px;
+  width: 100%;
+  display: none;
+  z-index: -3;
+}
+#footer .f-top .family .family_site .family_menu ul {
+  background: #fff;
+  padding: 15px 26px 20px;
+  border-top: 1px solid rgba(86, 93, 104, 0.2);
+  border-radius: 0 0 18px 18px;
+}
+#footer .f-top .family .family_site .family_menu ul li {
+  line-height: 35px;
+}
+#footer .f-top .family .family_site .family_menu ul li:hover a {
+  color: #111b2a;
+}
+#footer .f-top .family .family_site .family_menu ul li a {
+  font-size: 16px;
+  color: rgba(17, 27, 42, 0.4);
+  letter-spacing: -0.32px;
+  transition: 0.5s;
+}
+#footer .f-top .family .family_site.on {
+  background: #fff;
+  border-radius: 18px 18px 0 0;
+  border: none;
+  background-image: url("../images/main/up_arr_b.png");
+  background-repeat: no-repeat;
+  background-position: 88% center;
+}
+#footer .f-top .family .family_site.on span {
+  color: #111;
+}
+#footer .f-main {
+  padding: 97px 0 80px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-footer #footer .container .info .util {
-  margin-bottom: 40px;
+#footer .f-main > div {
+  width: 30%;
 }
-footer #footer .container .info .util ul {
-  display: flex;
+#footer .f-main > div.f-info {
+  width: 40%;
 }
-footer #footer .container .info .util ul li {
-  margin-right: 20px;
+#footer .f-main .f-info {
+  text-align: center;
 }
-footer #footer .container .info .address {
-  margin-bottom: 40px;
+#footer .f-main .f-info .f_logo {
+  display: block;
+  margin-bottom: 39px;
 }
-footer #footer .container .info .address ul li {
-  margin: 10px 0;
+#footer .f-main .menu_li {
+  font-size: 0;
 }
-footer #footer .container .sns ul {
-  display: flex;
-  margin-bottom: 20px;
+#footer .f-main .menu_li .menu_info {
+  display: block;
 }
-footer #footer .container .sns ul li {
-  margin-right: 20px;
+#footer .f-main .menu_li .menu_call {
+  display: inline-block;
 }
-footer #footer .container .sns ul li a {
+#footer .f-main .menu_li ul li {
+  line-height: 1.6;
+  position: relative;
+  display: inline-block;
+  padding: 0 9px;
+  font-size: 15px;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.6);
+}
+#footer .f-submenu {
+  border-top: 1px solid rgba(247, 247, 247, 0.1);
+  height: 55px;
+  text-align: center;
+}
+#footer .f-submenu ul {
+  font-size: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  background-color: #333;
-  border-radius: 100px;
-  transition: all 0.5s ease;
+  line-height: 55px;
+  font-size: initial;
 }
-footer #footer .container .sns ul li a:hover {
-  background-color: #326aff;
+#footer .f-submenu ul li {
+  padding: 0 19px;
+  line-height: 55px;
+  font-weight: 500;
 }
-footer #footer .container .sns .nts img {
-  height: 50px;
+#footer .f-submenu ul li a {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.3);
+}
+#footer .f-bt {
+  display: block;
+  height: 39px;
+  line-height: 39px;
+  background: #08111f;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.2);
 }
 
 .dis-no {
-  display: none;
+  display: none !important;
 }
 
 @media all and (min-width: 1280px) {
@@ -339,8 +442,22 @@ footer #footer .container .sns .nts img {
   header .gnb .gnb_inner .right .log_menu li:before {
     right: -1px;
   }
-  footer {
-    padding: clamp(30px, 7.1428571429vw, 100px) 0;
+}
+@media all and (max-width: 1366px) {
+  #footer .f-main .sns ul li {
+    margin-right: 8px;
+  }
+  #footer .f-main .sns ul li a {
+    width: 60px;
+    height: 60px;
+    line-height: 58px;
+  }
+  #footer .f-main .family .family_site {
+    height: 60px;
+    line-height: 58px;
+  }
+  #footer .f-main .family .family_site span {
+    line-height: 58px;
   }
 }
 @media all and (max-width: 1280px) {
@@ -348,9 +465,28 @@ footer #footer .container .sns .nts img {
     display: none;
   }
 }
-@media all and (max-width: 980px) {
+@media all and (max-width: 1000px) {
+  #footer .f-main {
+    flex-direction: column;
+    align-items: center;
+  }
+  #footer .f-main > div,
+  #footer .f-main > div.f-info {
+    width: auto;
+  }
+  #footer .f-main .f-info {
+    margin: 40px 0;
+  }
+  #footer .f-main .menu_li ul li {
+    display: block;
+  }
+}
+@media all and (max-width: 989px) {
   header .gnb .right .log_menu li {
     display: none;
+  }
+  #footer .f-main {
+    padding: 45px 0 40px;
   }
 }
 @media all and (max-width: 700px) {
@@ -359,5 +495,86 @@ footer #footer .container .sns .nts img {
   }
   header .gnb .right .all_menu {
     width: 20px;
+  }
+  #footer .f-top {
+    padding-top: 52px;
+  }
+  #footer .f-top .sns {
+    margin: 70px auto 25px;
+  }
+  #footer .f-top .sns ul {
+    font-size: 0;
+    display: flex;
+    justify-content: center;
+  }
+  #footer .f-top .sns ul li {
+    margin-right: 9px;
+    border-radius: 9px;
+  }
+  #footer .f-top .sns ul li a {
+    width: 51px;
+    height: 51px;
+    line-height: 49px;
+  }
+  #footer .f-top .family {
+    text-align: center;
+  }
+  #footer .f-top .family .family_site {
+    margin: 0 auto 35px;
+    width: 327px;
+    height: 52px;
+    line-height: 50px;
+    border-radius: 9px;
+    background-color: rgb(8, 17, 31);
+    border: 0;
+  }
+  #footer .f-top .family .family_site span {
+    line-height: 50px;
+    font-size: 14px;
+    padding: 0 20px;
+  }
+  #footer .f-top .family .family_site.on {
+    border-radius: 0 0 18px 18px;
+  }
+  #footer .f-top .family .family_site .family_menu {
+    top: auto;
+    bottom: 52px;
+  }
+  #footer .f-top .family .family_site .family_menu ul {
+    border-radius: 18px 18px 0 0;
+  }
+  #footer .f-info .f_logo {
+    display: block;
+    text-align: center;
+  }
+  #footer .f-info img {
+    width: 189px;
+  }
+  #footer .f-info .m_menu_li {
+    margin-top: 45px;
+    text-align: center;
+  }
+  #footer .f-info .m_menu_li .address {
+    font-size: 14px;
+    color: #fff;
+    opacity: 0.4;
+    line-height: 1.6;
+  }
+  #footer .f-submenu {
+    border-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #footer .f-submenu ul li {
+    line-height: 1;
+    padding: 0 7px;
+  }
+  #footer .f-submenu ul li a {
+    font-size: 12px;
+    font-weight: 300;
+  }
+  #footer .f-bt {
+    font-size: 12px;
   }
 }
