--- a/css/sub-contents.css
+++ b/css/sub-contents.css
@@ -1,311 +1,425 @@
-.tab {
-  margin-top: 100px;
+.header_top {
+  border-top: 1px solid rgba(13, 13, 13, 0.05);
 }
-.tab.tab02 .menu li {
-  flex-basis: 100%/2;
+
+.gap {
+  position: relative;
+  padding: 0 15px;
 }
-.tab.tab03 .menu li {
-  flex-basis: 100%/3;
+
+.introduce {
+  padding: 100px 0 0;
 }
-.tab.tab04 .menu li {
-  flex-basis: 100%/4;
-}
-.tab.tab05 .menu li {
-  flex-basis: 100%/5;
-}
-.tab.tab06 .menu li {
-  flex-basis: 100%/6;
-}
-.tab.tab07 .menu li {
-  flex-basis: 100%/7;
-}
-.tab.tab08 .menu li {
-  flex-basis: 100%/8;
-}
-.tab.tab09 .menu li {
-  flex-basis: 100%/9;
-}
-.tab .menu {
-  display: flex;
+.introduce .txt_wrap {
+  text-align: center;
   position: relative;
 }
-.tab .menu:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #326aff;
-  z-index: -1;
+.introduce .txt_wrap .txt_tit {
+  font-size: 52px;
+  letter-spacing: -2.6px;
+  color: #000;
+  line-height: 1.35;
+  padding: 22px 0 38px;
 }
-.tab .menu li {
-  height: 80px;
+
+.product .section01 {
+  position: relative;
+  z-index: 99;
+}
+.product .section01 .txt_wrap {
+  padding-bottom: 94px;
+  text-align: left;
+}
+.product .section01 .txt_wrap .main_txt {
+  line-height: 1.3;
+}
+.product .section01 .txt_wrap .sub_txt {
+  font-size: 22px;
+  display: inline-block;
+  transition: all 1.5s cubic-bezier(0, 0.72, 0.44, 0.99);
+}
+.product .section01 .txt_wrap .d_idx {
+  position: relative;
+  font-size: 15px;
+  font-weight: 300;
+  color: rgb(11, 11, 11);
+  display: inline-block;
+  padding-left: 168px;
+}
+.product .section01 .txt_wrap .d_idx:before {
+  position: absolute;
+  content: "";
+  height: 1px;
+  width: 128px;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(13, 13, 13, 0.5);
+}
+.product .section07 {
+  padding-bottom: 279px;
+  text-align: center;
+}
+
+.sub_page {
+  position: relative;
+  max-width: 1594px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.main_txt {
+  font-size: 57px;
+  font-weight: 500;
+  letter-spacing: -3.6px;
+  color: rgb(11, 11, 11);
+  line-height: 1;
+  padding: 22px 0 33px;
+}
+
+.interact_txt {
+  position: absolute;
+  bottom: -22px;
+  right: 0;
+  font-size: 220px;
+  letter-spacing: -13.38px;
+  color: rgba(231, 233, 235, 0.6);
+  line-height: 1;
+  white-space: nowrap;
+  opacity: 0;
+}
+
+.interact_txt.img-aniload {
+  opacity: 1;
+}
+
+.brand .txt_box {
+  margin-bottom: 60px;
+}
+.brand .txt_box .since {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 14px;
+}
+.brand .txt_box .since_ch {
+  color: #787878;
+  font-size: 20px;
+  vertical-align: super;
+}
+.brand .txt_box .since_txt {
+  font-size: 36px;
+  font-weight: 500;
+  color: #000;
+  letter-spacing: -1.8px;
+}
+.brand .section02 {
+  position: relative;
+  height: 750px;
+  background-image: url("../images/brand/about_bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.brand .section02 .sub_page {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  max-width: 1484px;
+}
+.brand .section02 .brand_tit {
+  font-size: 55px;
+  font-weight: 500;
+  margin-bottom: 29px;
+  color: #fff;
+  letter-spacing: -1.5px;
+  font-family: "Noto Sans KR";
+}
+.brand .section02 .brand_txt {
+  font-size: 22px;
+  color: #fff;
+  letter-spacing: -1.1px;
+  line-height: 1.77;
+}
+.brand .section03 {
+  text-align: center;
+  margin-top: 127px;
+}
+.brand .section03 .txt_box {
+  margin-bottom: 60px;
+}
+.brand .section03 .txt_box .since {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 14px;
+}
+.brand .section03 .txt_box .since_ch {
+  color: #787878;
+  font-size: 20px;
+  vertical-align: super;
+}
+.brand .section03 .txt_box .since_txt {
+  font-size: 36px;
+  font-weight: 500;
+  color: #000;
+  letter-spacing: -1.8px;
+}
+.brand .section03 .cont_box {
+  display: flex;
+  align-items: center;
+}
+.brand .section03 .cont_box .cont_img {
+  position: relative;
+}
+.brand .section03 .cont_box .cont_txt {
+  position: absolute;
+  display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
-  flex-basis: 20%;
-  font-size: 24px;
-  cursor: pointer;
+  margin-top: -3%;
+  flex-wrap: nowrap;
 }
-.tab .menu li.on {
-  border: 2px solid #326aff;
-  border-bottom: none;
-  border-radius: 20px 20px 0 0;
-  background-color: #fff;
-  color: #326aff;
+.brand .section03 .cont_box .cont_txt ul {
+  display: flex;
+  justify-content: center;
+  gap: 130px;
+  flex-wrap: nowrap;
 }
-.tab .contents {
-  margin: 80px 0;
-}
-.tab .contents > li {
-  display: none;
+.brand .section03 .cont_box .cont_txt ul li {
   position: relative;
-  padding: 50px 0;
 }
-.tab .contents > li:before {
+.brand .section03 .cont_box .cont_txt ul li:after {
+  position: absolute;
   content: "";
   display: block;
   width: 1px;
-  top: 0;
-  height: 100%;
-  position: absolute;
-  left: 169px;
-  background-color: #326aff;
+  height: 136px;
+  right: -65px;
+  top: 53px;
+  height: 82%;
+  background-color: rgba(32, 157, 203, 0.2);
 }
-.tab .contents > li.on {
-  display: block;
+.brand .section03 .cont_box .cont_txt ul li:last-child:after {
+  display: none;
 }
-.tab .contents > li .year li {
-  display: flex;
-  margin-bottom: 50px;
-  font-size: 20px;
-}
-.tab .contents > li .year li:nth-last-child(1) {
-  margin-bottom: 0;
-}
-.tab .contents > li .year li p {
-  padding-left: 100px;
-  margin-left: 50px;
-  position: relative;
-  display: flex;
-  flex-grow: 1;
-}
-.tab .contents > li .year li p:hover:before {
-  background-color: #326aff;
-}
-.tab .contents > li .year li p:before {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 12px;
-  border: 3px solid #326aff;
-  border-radius: 100px;
-  position: absolute;
-  left: 0;
-  transform: translateX(-50%);
-  background-color: #fff;
-  transition: all 0.25s ease;
-}
-.tab .contents > li .year li .date {
-  flex-basis: 120px;
-  color: #326aff;
-}
-.tab .contents > li .year li .current {
-  margin-left: auto;
-}
-
-#sub-contents-wrap .sns-list {
-  margin-top: 100px;
-  display: flex;
-}
-#sub-contents-wrap .sns-list li {
-  margin-right: 20px;
-}
-
-#sub-contents-title {
-  padding: 180px 0 100px;
-  background-color: #d1beab;
-}
-#sub-contents-title h2 {
-  font-size: 48px;
-  margin-bottom: 50px;
-}
-#sub-contents-title p {
-  font-size: 20px;
-  line-height: 1.5;
-}
-
-.introduce .diagram > ul {
-  display: flex;
-  justify-content: center;
-  margin-top: 150px;
-}
-.introduce .diagram > ul > li {
-  width: 25%;
-  background-color: rgba(221, 49, 86, 0.9);
-  border-radius: 1000px;
-  position: relative;
-  margin: 0 -20px;
+.brand .section03 .cont_box .cont_txt .txt_ch {
+  font-size: 136px;
+  font-weight: 300;
   color: #fff;
 }
-.introduce .diagram > ul > li:nth-child(2n) {
-  background-color: rgba(200, 200, 200, 0.75);
-  color: #111;
-  z-index: -1;
-}
-.introduce .diagram > ul > li:before {
-  content: "";
-  display: block;
-  padding-top: 100%;
-}
-.introduce .diagram > ul > li .contents {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  text-align: center;
-  padding-top: 100px;
+.brand .section03 .cont_box .cont_txt .txt_meaning {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-.introduce .diagram > ul > li .contents h3 {
-  font-size: 36px;
-  padding: 20px 10px;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-}
-.introduce .diagram > ul > li .contents .list {
-  padding: 10px 0;
-}
-.introduce .diagram > ul > li .contents .list li {
-  padding: 10px 0;
-}
-.introduce .philosophy {
-  margin-top: 150px;
-  line-height: 1.5;
-  text-align: center;
-}
-.introduce .philosophy p {
-  margin-top: 30px;
-}
-.introduce .philosophy strong {
-  font-weight: 700;
-  font-size: 36px;
-}
-
-.foundation .list li {
-  height: 100vh;
-  box-sizing: border-box;
-  padding: 150px 0;
-  background-repeat: no-repeat;
-  background-size: 30vw;
-  background-blend-mode: multiply;
-}
-.foundation .list li:nth-child(1) {
-  background-image: url("../images/sub-contents/founder-01.png");
-}
-.foundation .list li:nth-child(2) {
-  background-image: url("../images/sub-contents/founder-02.png");
-}
-.foundation .list li:nth-child(3) {
-  background-image: url("../images/sub-contents/founder-03.png");
-}
-.foundation .list li:nth-child(odd) {
-  background-color: #f0f4f6;
-  background-position: 80% 100%;
-}
-.foundation .list li:nth-child(even) {
-  background-position: 20% 100%;
-}
-.foundation .list li:nth-child(even) .container {
-  display: flex;
-  justify-content: flex-end;
-}
-.foundation .list li .title-box .name {
-  font-size: 36px;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-.foundation .list li .title-box .position {
-  color: #326aff;
-  font-size: 20px;
-  line-height: 1.5;
-}
-.foundation .list li .message {
-  margin-top: 120px;
-}
-.foundation .list li .message blockquote {
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 1.5;
-  position: relative;
-  margin-bottom: 50px;
-}
-.foundation .list li .message blockquote:before {
-  content: "";
-  display: block;
-  width: 100px;
-  height: 100px;
-  background: url("../images/sub-contents/icon-quote.svg") no-repeat;
-  position: absolute;
-  left: -20px;
-  top: -10px;
-}
-.foundation .list li .message p {
-  color: #999;
-  line-height: 1.5;
-  font-size: 20px;
-}
-
-.location .map {
-  height: 600px;
-  background-color: #f00;
-  margin-top: 100px;
-}
-.location .customoverlay {
-  transform: translateY(-80px);
-}
-.location .customoverlay a {
-  display: flex;
-  color: #111;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: hidden;
-  background-color: #326aff;
-}
-.location .customoverlay a:after {
-  content: "\f054";
-  font-family: "FontAwesome";
-  display: flex;
   justify-content: center;
   align-items: center;
-  width: 38px;
+}
+.brand .section03 .cont_box .cont_txt .txt_meaning .txt_ko {
+  background-color: #326aff;
+  width: 72px;
+  height: 35px;
+  border-radius: 17px;
+  text-align: center;
   color: #fff;
-}
-.location .customoverlay a span {
-  display: block;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: 500;
-  background-color: #fff;
-}
-
-.overlay {
-  transform: translateY(-80px);
-  background-color: #111;
-  border-radius: 10px;
-  padding: 15px;
-}
-.overlay li {
-  padding: 10px 20px;
-  background-color: #fff;
-  margin-bottom: 2px;
   font-size: 14px;
   font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  line-height: 35px;
+}
+.brand .section03 .cont_box .cont_txt .txt_meaning .text {
+  font-size: 22px;
+  font-weight: 500;
+  color: #fff;
+}
+.brand .section04 {
+  position: relative;
+  padding: 116px 0;
+}
+.brand .section04:before {
+  position: absolute;
+  content: "";
+  display: block;
+  left: 50%;
+  top: 33px;
+  width: 1px;
+  height: 49px;
+  background-color: rgba(13, 13, 13, 0.2);
+}
+.brand .section04 .sec04_cont {
+  position: relative;
+  text-align: center;
+}
+.brand .section04 .sec04_cont img {
+  max-width: 454px;
+  width: 100%;
+}
+.brand .section04 .sec04_txt {
+  font-size: 30px;
+  font-weight: 500;
+  color: #000;
+  text-align: left;
+  position: absolute;
+  left: 50%;
+  bottom: 13%;
+  line-height: 1.6;
+}
+.brand .section04:after {
+  position: absolute;
+  content: "DAELIMBATH";
+  font-size: 267.5px;
+  line-height: 1px;
+  letter-spacing: -13.38px;
+  color: rgba(0, 0, 0, 0.05);
+  display: inline-block;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -5;
+  transition: 0.8s;
+}
+.brand .section05 {
+  background-image: url("../images/brand/about_bg03.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.brand .section05 .since {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.7);
+}
+.brand .section05 .global_tit {
+  font-size: 36px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+.brand .section05 .global_txt {
+  font-size: 20px;
+  color: #fff;
+}
+.brand .section06 {
+  background: none;
+  padding: 122px 0 217px;
+}
+.brand .section06 .sub_page {
+  display: block;
+  max-width: 1594px;
+}
+.brand .section06 .contents_box {
+  text-align: left;
+  display: flex;
+  align-items: end;
+  gap: 68px;
+  flex-wrap: nowrap;
+}
+.brand .section06 .contents_box .global_tit {
+  color: #000;
+  font-size: 41px;
+  font-weight: 600;
+  letter-spacing: -0.41px;
+  line-height: 1.3;
+}
+.brand .section06 .contents_box .global_txt {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.8);
+  margin-top: 15px;
+  margin-bottom: 60px;
+  word-break: keep-all;
+}
+.brand .section06 .contents_box .as_cont ul {
+  display: flex;
+  gap: 13px;
+}
+.brand .section06 .contents_box .as_cont ul li {
+  position: relative;
+  max-width: 220px;
+}
+.brand .section06 .contents_box .as_cont ul li span {
+  text-align: center;
+  color: #000;
+  font-size: 15px;
+  display: block;
+  position: absolute;
+  width: 100%;
+  bottom: 32px;
+  line-height: 1.3;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.brand .section06 .txt_wrap {
+  padding-bottom: 60px;
+  text-align: center;
+  position: relative;
+}
+.brand .section07 {
+  padding-top: 0;
+  overflow: hidden;
+}
+.brand .section07 .sub_page {
+  max-width: 1603px;
+  position: relative;
+}
+.brand .section07 .txt_wrap {
+  padding-bottom: 30px;
+  font-size: 36px;
+  font-weight: 500;
+}
+.brand .section07 .txt_wrap .txt_tit {
+  font-size: 36px;
+  font-weight: 500;
+}
+.brand .section07 .bath_img {
+  position: relative;
+}
+.brand .section07 .bath_img.move:before {
+  left: 0;
+}
+.brand .section07 .bath_img.move:after {
+  right: 0;
+}
+.brand .section07 .bath_img:before {
+  position: absolute;
+  content: "BATH";
+  left: -10%;
+  font-size: 267.5px;
+  line-height: 1px;
+  display: inline-block;
+  letter-spacing: -13.38px;
+  color: rgba(0, 0, 0, 0.05);
+  top: 145px;
+  z-index: -5;
+  transition: 0.8s;
+}
+.brand .section07 .bath_img .img_ab {
+  position: absolute;
+}
+.brand .section07 .bath_img .bath02 {
+  left: 61px;
+  top: 278px;
+}
+.brand .section07 .bath_img .bath03 {
+  right: 57px;
+  top: 77px;
+}
+.brand .section07 .bath_img .bath04 {
+  right: 322px;
+  top: 290px;
+}
+.brand .section07 .bath_img .bath05 {
+  left: 203px;
+  bottom: -96px;
+}
+.brand .section07 .bath_img:after {
+  position: absolute;
+  content: "ROOM";
+  right: -10%;
+  font-size: 267.5px;
+  line-height: 1px;
+  display: inline-block;
+  letter-spacing: -13.38px;
+  color: rgba(0, 0, 0, 0.05);
+  transition: 0.8s;
+  z-index: -5;
+  bottom: 36px;
 }
