--- a/scss/main.scss
+++ b/scss/main.scss
@@ -146,7 +146,6 @@ body {
         .main_tit {
           font-size: 16px;
           color: rgba(255, 255, 255, 0.5);
-          // color: rgba(255, 255, 255, 1);
           display: block;
           transition: 0.3s;
         }
@@ -154,7 +153,6 @@ body {
           font-size: 12px;
           font-weight: 300;
           color: rgba(255, 255, 255, 0.5);
-          // color: rgba(255, 255, 255, 1);
           transition: 0.3s;
         }
       }
@@ -193,6 +191,7 @@ body {
     position: relative;
     margin-top: 47px;
     text-align: center;
+    overflow: hidden;
     .cont-img {
       font-size: 0;
       > li {
@@ -1533,7 +1532,7 @@ body {
     #section02 {
       .page.bath-slide {
         padding-left: 0;
-        width: calc(100% + 15px);
+        width: 100%;
       }
       .swiper-button-prev {
         width: 20px;
@@ -1839,6 +1838,9 @@ body {
       .page {
         padding-left: 0;
         padding-right: 0;
+        > div {
+          overflow: hidden;
+        }
       }
       .slidebx .media_list li {
         padding: 25.8%;
@@ -1853,7 +1855,6 @@ body {
     }
   }
 }
-
 @media all and (max-width: 500px) {
   #wrap {
     #section05 {
