--- a/scss/sub-contents.scss
+++ b/scss/sub-contents.scss
@@ -1,338 +1,436 @@
 @import "vars";
 @import "mixins";
-
-.tab {
-  margin-top: 100px;
-  &.tab02 .menu li {
-    flex-basis: 100% / 2;
-  }
-  &.tab03 .menu li {
-    flex-basis: 100% / 3;
-  }
-  &.tab04 .menu li {
-    flex-basis: 100% / 4;
-  }
-  &.tab05 .menu li {
-    flex-basis: 100% / 5;
-  }
-  &.tab06 .menu li {
-    flex-basis: 100% / 6;
-  }
-  &.tab07 .menu li {
-    flex-basis: 100% / 7;
-  }
-  &.tab08 .menu li {
-    flex-basis: 100% / 8;
-  }
-  &.tab09 .menu li {
-    flex-basis: 100% / 9;
-  }
-
-  .menu {
-    display: flex;
+.header_top {
+  border-top: 1px solid rgba(13, 13, 13, 0.05);
+}
+.gap {
+  position: relative;
+  padding: 0 15px;
+}
+.introduce {
+  padding: 100px 0 0;
+  .txt_wrap {
+    text-align: center;
     position: relative;
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 2px;
-      background-color: $main-color;
-      z-index: -1;
+    .txt_tit {
+      font-size: 52px;
+      letter-spacing: -2.6px;
+      color: #000;
+      line-height: 1.35;
+      padding: 22px 0 38px;
     }
-    li {
-      height: 80px;
-      @include flex;
-      box-sizing: border-box;
-      flex-basis: 20%; // 자식의 넓이 지정하기....
-      font-size: $h3;
-      cursor: pointer;
-      &.on {
-        border: 2px solid $main-color;
-        border-bottom: none;
-        border-radius: 20px 20px 0 0;
-        background-color: #fff;
-        color: $main-color;
+  }
+}
+.product {
+  // overflow: hidden;
+  .section01 {
+    position: relative;
+    z-index: 99;
+    .txt_wrap {
+      padding-bottom: 94px;
+      text-align: left;
+      .main_txt {
+        line-height: 1.3;
+      }
+      .sub_txt {
+        font-size: 22px;
+        display: inline-block;
+        transition: all 1.5s cubic-bezier(0, 0.72, 0.44, 0.99);
+        // transition-delay: 0.6s;
+      }
+      .d_idx {
+        position: relative;
+        font-size: 15px;
+        font-weight: 300;
+        color: rgb(11, 11, 11);
+        display: inline-block;
+        padding-left: 168px;
+        &:before {
+          position: absolute;
+          content: "";
+          height: 1px;
+          width: 128px;
+          left: 20px;
+          top: 50%;
+          transform: translateY(-50%);
+          background-color: rgba(13, 13, 13, 0.5);
+        }
       }
     }
   }
-  .contents {
-    margin: 80px 0;
-    > li {
-      display: none;
-      position: relative;
-      padding: 50px 0;
-      &:before {
-        content: "";
-        display: block;
-        width: 1px;
-        top: 0;
-        height: 100%;
+  .section07 {
+    padding-bottom: 279px;
+    text-align: center;
+  }
+}
+.sub_page {
+  position: relative;
+  max-width: 1594px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.main_txt {
+  font-size: 57px;
+  font-weight: 500;
+  letter-spacing: -3.6px;
+  color: rgb(11, 11, 11);
+  line-height: 1;
+  padding: 22px 0 33px;
+}
+.interact_txt {
+  position: absolute;
+  bottom: -22px;
+  right: 0;
+  font-size: 220px;
+  letter-spacing: -13.38px;
+  color: rgba(231, 233, 235, 0.6);
+  line-height: 1;
+  white-space: nowrap;
+  opacity: 0;
+}
+.interact_txt.img-aniload {
+  opacity: 1;
+}
+.brand {
+  .txt_box {
+    margin-bottom: 60px;
+    .since {
+      color: rgba(0, 0, 0, 0.7);
+      font-size: 14px;
+    }
+    .since_ch {
+      color: #787878;
+      font-size: 20px;
+      vertical-align: super;
+    }
+    .since_txt {
+      font-size: 36px;
+      font-weight: 500;
+      color: #000;
+      letter-spacing: -1.8px;
+    }
+  }
+  .section02 {
+    position: relative;
+    height: 750px;
+    background: {
+      image: url("../images/brand/about_bg.png");
+      repeat: no-repeat;
+      position: center;
+    }
+    .sub_page {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      max-width: 1484px;
+    }
+    .brand_tit {
+      font-size: 55px;
+      font-weight: 500;
+      margin-bottom: 29px;
+      color: #fff;
+      letter-spacing: -1.5px;
+      font-family: "Noto Sans KR";
+    }
+    .brand_txt {
+      font-size: 22px;
+      color: #fff;
+      letter-spacing: -1.1px;
+      line-height: 1.77;
+    }
+  }
+  .section03 {
+    text-align: center;
+    margin-top: 127px;
+    .txt_box {
+      margin-bottom: 60px;
+      .since {
+        color: rgba(0, 0, 0, 0.7);
+        font-size: 14px;
+      }
+      .since_ch {
+        color: #787878;
+        font-size: 20px;
+        vertical-align: super;
+      }
+      .since_txt {
+        font-size: 36px;
+        font-weight: 500;
+        color: #000;
+        letter-spacing: -1.8px;
+      }
+    }
+    .cont_box {
+      display: flex;
+      align-items: center;
+      .cont_img {
+        position: relative;
+      }
+      .cont_txt {
         position: absolute;
-        left: 169px;
-        background-color: $main-color;
-      }
-      &.on {
-        display: block;
-      }
-      .year {
-        li {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: -3%;
+        flex-wrap: nowrap;
+        ul {
           display: flex;
-          margin-bottom: 50px;
-          font-size: $h4;
-          &:nth-last-child(1) {
-            margin-bottom: 0;
-          }
-          p {
-            padding-left: 100px;
-            margin-left: 50px;
+          justify-content: center;
+          gap: 130px;
+          flex-wrap: nowrap;
+          li {
             position: relative;
-            display: flex;
-            flex-grow: 1;
-            &:hover:before {
-              background-color: $main-color;
-            }
-            &:before {
+            &:after {
+              position: absolute;
               content: "";
               display: block;
-              width: 12px;
-              height: 12px;
-              border: 3px solid $main-color;
-              border-radius: 100px;
-              position: absolute;
-              left: 0;
-              transform: translateX(-50%);
-              background-color: #fff;
-              transition: all 0.25s ease;
+              width: 1px;
+              height: 136px;
+              right: -65px;
+              top: 53px;
+              height: 82%;
+              background-color: rgba(32, 157, 203, 0.2);
+            }
+            &:last-child:after {
+              display: none;
             }
           }
-          .date {
-            flex-basis: 120px;
-            color: $main-color;
-          }
-          .current {
-            margin-left: auto;
-          }
         }
-      }
-    }
-  }
-}
-
-#sub-contents-wrap {
-  .sns-list {
-    margin-top: 100px;
-    display: flex;
-    li {
-      margin-right: 20px;
-    }
-  }
-}
-#sub-contents-title {
-  padding: 180px 0 100px;
-  background-color: darken(#f5f1ed, 20);
-  h2 {
-    font-size: $h1;
-    margin-bottom: 50px;
-  }
-  p {
-    font-size: 20px;
-    line-height: 1.5;
-  }
-}
-
-.introduce {
-  .diagram {
-    > ul {
-      display: flex;
-      justify-content: center;
-      margin-top: 150px;
-      > li {
-        width: 25%;
-        background-color: rgba(221, 49, 86, 0.9);
-        border-radius: 1000px;
-        position: relative;
-        margin: 0 -20px;
-        color: #fff;
-        &:nth-child(2n) {
-          background-color: rgba(200, 200, 200, 0.75);
-          color: #111;
-          z-index: -1;
+        .txt_ch {
+          font-size: 136px;
+          font-weight: 300;
+          color: #fff;
         }
-        &:before {
-          content: "";
-          display: block;
-          padding-top: 100%;
-        }
-        .contents {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-          text-align: center;
-          padding-top: 100px;
+        .txt_meaning {
           display: flex;
           flex-direction: column;
+          justify-content: center;
           align-items: center;
-          h3 {
-            font-size: $h2;
-            padding: 20px 10px;
-            border-top: 1px solid #fff;
-            border-bottom: 1px solid #fff;
+          .txt_ko {
+            background-color: #326aff;
+            width: 72px;
+            height: 35px;
+            border-radius: 17px;
+            text-align: center;
+            color: #fff;
+            font-size: 14px;
+            font-weight: 500;
+            margin-top: 10px;
+            margin-bottom: 15px;
+            line-height: 35px;
           }
-          .list {
-            padding: 10px 0;
-            li {
-              padding: 10px 0;
-            }
-          }
-        }
-      }
-    }
-  }
-  .philosophy {
-    margin-top: 150px;
-    line-height: 1.5;
-    text-align: center;
-    p {
-      margin-top: 30px;
-    }
-    strong {
-      font-weight: 700;
-      font-size: $h2;
-    }
-  }
-}
-.foundation {
-  .list {
-    li {
-      height: 100vh;
-      box-sizing: border-box;
-      padding: 150px 0;
-      background-repeat: no-repeat;
-      background-size: 30vw;
-      background-blend-mode: multiply;
-      &:nth-child(1) {
-        background-image: url("../images/sub-contents/founder-01.png");
-      }
-      &:nth-child(2) {
-        background-image: url("../images/sub-contents/founder-02.png");
-      }
-      &:nth-child(3) {
-        background-image: url("../images/sub-contents/founder-03.png");
-      }
-
-      &:nth-child(odd) {
-        background-color: #f0f4f6;
-        background-position: 80% 100%;
-      }
-      &:nth-child(even) {
-        background-position: 20% 100%;
-        .container {
-          display: flex;
-          justify-content: flex-end;
-        }
-      }
-
-      .title-box {
-        .name {
-          font-size: $h2;
-          font-weight: 500;
-          margin-bottom: 20px;
-        }
-        .position {
-          color: $main-color;
-          font-size: $h4;
-          line-height: 1.5;
-        }
-      }
-      .message {
-        margin-top: 120px;
-        blockquote {
-          font-size: $h1;
-          font-weight: 700;
-          line-height: 1.5;
-          position: relative;
-          margin-bottom: 50px;
-          &:before {
-            content: "";
-            display: block;
-            width: 100px;
-            height: 100px;
-            background: url("../images/sub-contents/icon-quote.svg") no-repeat;
-            position: absolute;
-            left: -20px;
-            top: -10px;
+          .text {
+            font-size: 22px;
+            font-weight: 500;
+            color: #fff;
           }
         }
-        p {
-          color: #999;
-          line-height: 1.5;
-          font-size: $h4;
-        }
       }
     }
   }
-}
-
-.location {
-  .map {
-    height: 600px;
-    background-color: #f00;
-    margin-top: 100px;
+  .section04 {
+    position: relative;
+    padding: 116px 0;
+    &:before {
+      position: absolute;
+      content: "";
+      display: block;
+      left: 50%;
+      top: 33px;
+      width: 1px;
+      height: 49px;
+      background-color: rgba(13, 13, 13, 0.2);
+    }
+    .sec04_cont {
+      position: relative;
+      text-align: center;
+      img {
+        max-width: 454px;
+        width: 100%;
+      }
+    }
+    .sec04_txt {
+      font-size: 30px;
+      font-weight: 500;
+      color: #000;
+      text-align: left;
+      position: absolute;
+      left: 50%;
+      bottom: 13%;
+      line-height: 1.6;
+    }
+    &:after {
+      position: absolute;
+      content: "DAELIMBATH";
+      font-size: 267.5px;
+      line-height: 1px;
+      letter-spacing: -13.38px;
+      color: rgba(0, 0, 0, 0.05);
+      display: inline-block;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -5;
+      transition: 0.8s;
+    }
   }
-  .customoverlay {
-    transform: translateY(-80px);
-    a {
+  .section05 {
+    background: {
+      image: url("../images/brand/about_bg03.png");
+      repeat: no-repeat;
+      position: center;
+    }
+    .since {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.7);
+    }
+    .global_tit {
+      font-size: 36px;
+      color: #fff;
+      font-weight: 500;
+      line-height: 1.3;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+    .global_txt {
+      font-size: 20px;
+      color: #fff;
+    }
+  }
+  .section06 {
+    background: none;
+    padding: 122px 0 217px;
+    .sub_page {
+      display: block;
+      max-width: 1594px;
+    }
+    .contents_box {
+      text-align: left;
       display: flex;
-      color: #111;
-      box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      overflow: hidden;
-      background-color: $main-color;
-      &:after {
-        content: "\f054";
-        font-family: "FontAwesome";
-        @include flex;
-        width: 38px;
-        color: #fff;
+      align-items: end;
+      gap: 68px;
+      flex-wrap: nowrap;
+      .global_tit {
+        color: #000;
+        font-size: 41px;
+        font-weight: 600;
+        letter-spacing: -0.41px;
+        line-height: 1.3;
       }
-      span {
-        display: block;
-        padding: 10px 20px;
-        font-size: 16px;
+      .global_txt {
+        font-size: 20px;
+        color: rgba(0, 0, 0, 0.8);
+        margin-top: 15px;
+        margin-bottom: 60px;
+        word-break: keep-all;
+      }
+      .as_cont ul {
+        display: flex;
+        gap: 13px;
+        li {
+          position: relative;
+          max-width: 220px;
+          span {
+            text-align: center;
+            color: #000;
+            font-size: 15px;
+            display: block;
+            position: absolute;
+            width: 100%;
+            bottom: 32px;
+            line-height: 1.3;
+            left: 50%;
+            transform: translateX(-50%);
+          }
+        }
+      }
+    }
+
+    .txt_wrap {
+      padding-bottom: 60px;
+      text-align: center;
+      position: relative;
+    }
+  }
+  .section07 {
+    padding-top: 0;
+    overflow: hidden;
+    .sub_page {
+      max-width: 1603px;
+      position: relative;
+    }
+    .txt_wrap {
+      padding-bottom: 30px;
+      font-size: 36px;
+      font-weight: 500;
+      .txt_tit {
+        font-size: 36px;
         font-weight: 500;
-        background-color: #fff;
+      }
+    }
+    .bath_img {
+      position: relative;
+      &.move {
+        &:before {
+          left: 0;
+        }
+        &:after {
+          right: 0;
+        }
+      }
+      &:before {
+        position: absolute;
+        content: "BATH";
+        left: -10%;
+        font-size: 267.5px;
+        line-height: 1px;
+        display: inline-block;
+        letter-spacing: -13.38px;
+        color: rgba(0, 0, 0, 0.05);
+        top: 145px;
+        z-index: -5;
+        transition: 0.8s;
+      }
+      .img_ab {
+        position: absolute;
+      }
+      .bath02 {
+        // width: 13.35%;
+        left: 61px;
+        top: 278px;
+      }
+      .bath03 {
+        // width: 21.58%;
+        right: 57px;
+        top: 77px;
+      }
+      .bath04 {
+        // width: 13.35%;
+        right: 322px;
+        top: 290px;
+      }
+      .bath05 {
+        // width: 24.89%;
+        left: 203px;
+        bottom: -96px;
+      }
+      &:after {
+        position: absolute;
+        content: "ROOM";
+        right: -10%;
+        font-size: 267.5px;
+        line-height: 1px;
+        display: inline-block;
+        letter-spacing: -13.38px;
+        color: rgba(0, 0, 0, 0.05);
+        transition: 0.8s;
+        z-index: -5;
+        bottom: 36px;
       }
     }
   }
-}
-
-.overlay {
-  transform: translateY(-80px);
-  background-color: #111;
-  border-radius: 10px;
-  padding: 15px;
-  li {
-    padding: 10px 20px;
-    background-color: #fff;
-    margin-bottom: 2px;
-    font-size: 14px;
-    font-weight: 500;
-  }
-}
-@media all and (max-width: 1280px) {
-  // 여기다가 1280보다 작아졌을때 어떤 css 쓸건지 적용
-}
-
-@media all and (max-width: 960px) {
-  // 여기다가 960px보다 작아졌을때 어떤 css 쓸건지 적용
-}
-
-@media all and (max-width: 640px) {
-  // 여기다가 640px보다 작아졌을때 어떤 css 쓸건지 적용
 }
